<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/placesGlobalLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout

        android:id="@+id/prrid"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:minWidth="100dp"

        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/placesimagelayoutid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"


            android:layout_weight="2">


            <ImageView
                android:id="@+id/placesImageViewID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"


                android:minWidth="120dp"
                app:srcCompat="@drawable/ic_launcher_background" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="2"
            android:orientation="vertical"

            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="7dp"


                >

                <TextView
                    android:id="@+id/nameViewID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textSize="16sp"
                    android:textStyle="bold"


                    />

                <TextView
                    android:id="@+id/historyViewID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/bilgi"

                    android:textSize="12sp"


                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >

                <Button
                    android:id="@+id/butonViewmoreDetailID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="2"
                    android:background="@drawable/bg_button"
                    android:fontFamily="@font/lora_bold"
                    android:text="@string/more_details"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/butonViewID"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="2"
                    android:background="@drawable/bg_button"

                    android:drawableEnd="@drawable/nav_icon"
                    android:fontFamily="@font/lora_bold"
                    android:text="@string/maps"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>
